# Path: crates/services/Cargo.toml
[package]
name = "ioi-services"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Services for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi-sdk"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-macros = { path = "../macros" }
ioi-scs = { path = "../scs" }
ioi-pii = { path = "../pii" }

log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
ioi-crypto = { path = "../crypto" }
async-trait = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
libp2p = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }
bincode = { workspace = true }
dcrypt = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
# [FIX] Add base64 dependency
base64 = { workspace = true }
once_cell = { workspace = true }
sha2 = "0.10"

# [FIX] Added 'rt' feature for tokio::spawn
tokio = { workspace = true, features = ["sync", "rt", "time", "process"] }
# [FIX] Added rand dependency
rand = { workspace = true }

# [FIX] Added url dependency
url = "2.5"
dotenvy = "0.15"

# HTML parsing for edge web retrieval (`web__search` / `web__read`).
scraper = "0.18"
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4", "mp3", "ogg", "vorbis", "mkv", "wav"] }
whisper-rs = "0.15.1"

# [NEW] Added schemars for schema generation
schemars = "0.8"

# Visual Perceptual Hashing for Desktop Agent
image = "0.25"
image_hasher = "2.0" 

# [FIX] Added missing dependencies
regex = "1.10"
unicode-normalization = "0.1"
walkdir = "2.4"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"
ioi-state = { path = "../state" }
ioi-client = { path = "../client" }
ioi-drivers = { path = "../drivers" }
imap = { version = "2.4.1" }
native-tls = "0.2.18"
lettre = { version = "0.11.19" }

[features]
default = [] 

gas-escrow = []
agentic = ["gas-escrow"]
