# Path: crates/state_trees/Cargo.toml
[package]
name = "depin-sdk-state-tree"
version = "0.1.0"
edition = "2021"
description = "State tree implementations for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
depin-sdk-commitment = { path = "../commitment" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[features]
default = []
verkle = ["depin-sdk-commitment/kzg"]
sparse_merkle = ["depin-sdk-commitment/hash"]
iavl = ["depin-sdk-commitment/hash"]
