# Path: crates/commitment/Cargo.toml
[package]
name = "ioi-state"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "State commitment trees and cryptographic primitives for the IOI SDK"
license = "MIT OR Apache-2.0"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-crypto = { path = "../crypto" }
ioi-storage = { path = "../storage" }
ahash = "0.8"
dcrypt = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = [
    "derive",
    "rc",
] } # Added "rc" feature for Arc/Rc support
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
lazy_static = "1.4.0"
parity-scale-codec = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
proptest = "1.2.0"

[features]
default = []

# Primitives
primitive-hash = []
primitive-kzg = []
primitive-lattice = []
primitive-pedersen = ["ioi-api/homomorphic"]

# Trees (depend on primitives)
tree-iavl = ["primitive-hash"]
tree-sparse-merkle = ["primitive-hash"]
tree-verkle = ["primitive-kzg"]

# Debugging feature
strict_iavl = []
